# adventofcode

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  aoc_check_answers.py  aoc_download_answers.py  aoc_download_inputs.py  aoc_download_your_answers.py  pyproject.toml
2022/: 14.py  5.py  9.py
aoc2015/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  1.py  10.py  11.py  12.py  13.py  14.py  15.csv  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
aoc2016/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
aoc2017/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
aoc2018/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
aoc2019/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py
aoc2020/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
aoc2021/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  21.py  22.py  24.py  25.py
aoc2022/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  6.py  7.py  8.py
aoc2023/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  _13.py  _21.py
aoc2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
aoc2025/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py
codingame_summer2023/: 1.py  2.sql  3.py  5.py
masterdevfrance2023/: finale3.py
techchallenger2022/: 20230119_2.py  (+5 more)
(+8 files in other folders)
