[tool.poetry]
name = "AdventOfCode"
version = "0.1.0"
description = ""
authors = ["Guillaume Pujol <guill.p.linux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^1.5.2"
stringparser = "^0.6"
astar = "^0.94"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["A", "ANN", "F", "I", "UP", "W"]
ignore = [
    "ANN101",
    "ANN102",
]
