[project]
name = "AdventOfCode"
version = "0.1.0"
description = ""
authors = [{ name = "Guillaume Pujol", email = "guillp.dev+github@pm.me" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pandas>=2.0.0",
    "astar>=0.94",
    "networkx>=3.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ARG001",
    "B007",
    "B011",
    "B019",
    "B020",
    "B905",
    "BLE001",
    "C901",
    "D",
    "DTZ001",
    "E741",
    "EM101",
    "ERA001",
    "FBT001",
    "FBT002",
    "FBT003",
    "FIX002",
    "INP001",
    "N803",
    "N806",
    "N818",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "PLR1704",
    "PLR2004",
    "PLW2901",
    "PT015",
    "PT017",
    "PTH123",
    "RET504",
    "RUF059",
    "S",
    "T201",
    "TC003",
    "TD",
    "TRY003",
    "COM812",
    "ISC001",
]
